--- a/game_page.html
+++ b/game_page.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Guess The Word</title>
+	<title>Math Quiz (multiplication)</title>
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
@@ -27,7 +27,7 @@
 <input type="text" id="number_enter" class="form-control" placeholder="number">
 		<br>
 		<label> Number 2 </label>
-<input type="text" id="number_enter" class="form-control" placeholder="number">
+<input type="text" id="number_enter2" class="form-control" placeholder="number">
 		<br>
 <button onclick="send()" class="btn btn-success" style="width: 30%;"> Send  </button>
 	</center>
